# Firefly-sync

./: .gitignore  KURAMOTO_FRONTEND_DYNAMICS_AUDIT.md  LICENSE  LOG_CLEANUP_PLAN.md  PROJECT_STATUS_REPORT.md  README.md  pyproject.toml  requirements.txt  run_step5b_mutual_hil_batch.py
docs/: multi_neighbour_simulation_design.md  project_requirements.md  stage4a_simulation_setup_technical_note.md  step5_mutual_hil_logic_audit.md  step5a_mutual_hil_design.md  step5b_mutual_hil_experiment_plan.md  step5c2_step5d_experimental_plan.md
experiments/: analyse_step3a_pi_visual_batch.py  analyse_step4b_eapf_pi_visual_batch.py  analyse_step5b_kuramoto_k_sweep.py  analyse_step5b_mutual_hil_batch.py  check_step5b_virtual_feedback_response.py  check_step5b_virtual_source_stability.py  compare_stage4a_final_evaluations.py  final_stage4a_model_evaluation.py  lock_stage4a_model_parameters.py  run_2v1p_eapf_hil.py  run_leader_ui.py  run_pi_visual_alignment_check.py  run_stage3b_synthetic_model_batch.py  run_stage4a_multi_neighbour_simulation.py  run_step3a_batch_kuramoto.py  run_step3a_kuramoto_closed_loop.py  run_step3a_pi_visual_batch.py  run_step4b_eapf_pi_visual_smoke.py  run_step4b_eapf_single_leader_mock.py  run_step5a_mutual_hil_smoke.py  run_step5b_kuramoto_k_sweep.py  run_step5b_mutual_hil_batch.py  run_step5c1_multi_roi_detection_batch.py  run_step5c2_2v1p_eapf_sync_batch.py  stream_pi_camera_detection.py  sweep_stage3b_synthetic_models.py  sweep_stage4a_multi_neighbour_models.py  test_pi_led.py
firefly_sync/: __init__.py
hardware_validation/: blink_gpio17.py  (+1 more)
(+2636 files in other folders)
